--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -18,14 +18,13 @@
             crossorigin="anonymous" th:src="@{/webjars/bootstrap/5.3.3/js/bootstrap.min.js}"></script>
 </head>
 <body>
+<!--/*@thymesVar id="recipe" type="sounak.springframework.spring5_recipe_app.model.Recipe"*/-->
 <div class="container" style="margin-top: 20px">
     <div class="row">
         <div class="col-md-8 mx-auto">
             <div>
                 <div class="card" style="margin-bottom: 20px">
                     <div class="card-header bg-primary text-white">
-                        <!--/*@thymesVar id="recipe"
-                        type="sounak.springframework.spring5_recipe_app.model.Recipe"*/-->
                         <h1 class="card-title" th:text="${recipe.description}">Recipe Description Here!</h1>
                     </div>
                     <div class="card-body">
@@ -37,8 +36,6 @@
                                 <ul>
                                     <li th:remove="all">cat one</li>
                                     <li th:remove="all">cat two</li>
-                                    <!--/*@thymesVar id="recipe"
-                                    type="sounak.springframework.spring5_recipe_app.model.Recipe"*/-->
                                     <li th:each="category : ${recipe.categories}"
                                         th:text="${category.getDescription()}">cat three</li>
                                 </ul>
@@ -82,8 +79,8 @@
                             <div class="col-md-3">
                                 <h5>URL:</h5>
                             </div>
-                            <div class="col-md-3" th:text="${recipe.url}">
-                                <p>http://www.example.com</p>
+                            <div class="col-md-3">
+                                <p><a href="#" th:href="@{recipe.url}" >View Original</a></p>
                             </div>
                         </div>
                     </div>
