--- a/src/main/resources/templates/recipe/recipeForm.html
+++ b/src/main/resources/templates/recipe/recipeForm.html
@@ -108,7 +108,7 @@
                                         <li th:remove="all">1 Teaspoon of chocolate</li>
                                         <li th:each="ingredient : ${recipe.ingredients}"
                                             th:text="${(ingredient.getAmount() +
-                                        ' ' + ingredient.uom.getDescription() +
+                                        ' ' + ingredient.getUnitOfMeasure().getDescription() +
                                         ' - ' + ingredient.getDescription())}">1 Teaspoon of Sugar
                                         </li>
                                     </ul>
@@ -134,6 +134,7 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-12 form-group">
+                                    <input type="hidden" th:field="*{notes.id}" />
                                     <textarea class="form-control" rows="3" th:field="*{notes.recipeNotes}"></textarea>
                                 </div>
                             </div>
