--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -87,7 +87,14 @@
                 </div>
                 <div class="card" style="margin-bottom: 20px">
                     <div class="card-header bg-primary text-white">
-                        <h1 class="card-title" >Ingredients</h1>
+                        <div class="row">
+                            <div class="col-md-10 ">
+                                <h1 class="card-title">Ingredients</h1>
+                            </div>
+                            <div class="col-md-2">
+                                <a class="btn btn-primary" href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredients'}" role="button">View</a>
+                            </div>
+                        </div>
                     </div>
                     <div class="card-body">
                         <div class="row">
