--- a/src/main/resources/templates/recipe/ingredient/show.html
+++ b/src/main/resources/templates/recipe/ingredient/show.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>List Ingredients</title>
+    <title>View Ingredient</title>
 
     <!-- Latest compiled and minified CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -18,34 +18,23 @@
             crossorigin="anonymous" th:src="@{/webjars/bootstrap/5.3.3/js/bootstrap.min.js}"></script>
 </head>
 <body>
-<!--/*@thymesVar id="recipe" type="sounak.springframework.spring5_recipe_app.model.Recipe"*/-->
-<!--/*@thymesVar id="ingredients" type="java.util.Set<sounak.springframework.spring5_recipe_app.commands.IngredientCommand>"*/-->
+<!--/*@thymesVar id="ingredient" type="sounak.springframework.spring5_recipe_app.commands.IngredientCommand"*/-->
 <div class="container" style="margin-top: 20px">
     <div class="row">
-        <div class="col-md-8 mx-auto">
+        <div class="col-md-6 mx-auto">
             <div class="card">
                 <div class="card-header bg-primary text-white">
-                    <h1 class="card-title">Ingredients</h1>
+                    <h1 class="card-title">Ingredient</h1>
                 </div>
                 <div class="card-body">
-                    <div class="table-responsive" th:if="${not #lists.isEmpty(recipe.ingredients)}">
+                    <div class="table-responsive">
                         <table class="table table-hover">
                             <thead class="thead-dark">
                             <tr>
                                 <th>ID</th>
                                 <th>Description</th>
-                                <th>View</th>
-                                <th>Update</th>
-                                <th>Delete</th>
                             </tr>
                             </thead>
-                            <tr th:remove="all">
-                                <td>123</td>
-                                <td>Tasty Goodnees 1</td>
-                                <td><a href="#">View</a></td>
-                                <td><a href="#">Update</a></td>
-                                <td><a href="#">Delete</a></td>
-                            </tr>
                             <tr th:remove="all">
                                 <td>12333</td>
                                 <td>Tasty Goodnees 2</td>
@@ -53,12 +42,9 @@
                                 <td><a href="#">Update</a></td>
                                 <td><a href="#">Delete</a></td>
                             </tr>
-                            <tr th:each="ingredient : ${recipe.ingredients}">
+                            <tr>
                                 <td th:text="${ingredient.id}">334</td>
                                 <td th:text="${ingredient.amount} + ' ' + ${ingredient.getUnitOfMeasure().getDescription()} + ' ' + ${ingredient.description}">Tasty Goodnees 3</td>
-                                <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredient/' + ${ingredient.id} + '/show'}">View</a></td>
-                                <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredient/' + ${ingredient.id} + '/update'}">Update</a></td>
-                                <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredient/' + ${ingredient.id} + '/delete'}">Delete</a></td>
                             </tr>
                         </table>
                     </div>
