--- a/src/main/resources/templates/recipe/recipeForm.html
+++ b/src/main/resources/templates/recipe/recipeForm.html
@@ -24,6 +24,7 @@
         <div class="col-md-7 mx-auto">
             <form  th:object="${recipe}" th:action="@{/recipe}"  method="post">
                 <input type="hidden" th:field="*{id}"/>
+                <input type="hidden" th:field="*{image}"/>
                 <div>
                     <div class="card" style="margin-bottom: 20px">
                         <div class="card-header bg-primary text-white">
